--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@awslv/knex-aurora-data-api-client",
-  "version": "1.10.0",
+  "version": "1.10.1",
   "description": "Knex Aurora Data API Client",
   "main": "index.js",
   "files": [
@@ -34,7 +34,7 @@
   "homepage": "https://github.com/lucasvieirasilva/knex-data-api-client#readme",
   "dependencies": {
     "bluebird": "3.7.2",
-    "data-api-client": "@awslv/data-api-client"
+    "@awslv/data-api-client": "^1.3.0"
   },
   "peerDependencies": {
     "knex": "^2.1.0"
